--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           push: true
           tags: ghcr.io/placenl/placenl-python:latest
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
